--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
                     <a href="index.html" class="ref">Read More</a>
                 </div>
             </div>
+            <div class="box">
+                <img src="pictures/logotargaryen-removebg-preview.png" class="img">
+                <div class="info">
+                    <h2 class="subtitulo">Logo Targaryen</h2>
+                    <hr class="divider">
+                    <a href="index.html" class="ref">Read More</a>
+                </div>
+            </div>
+            
          </div>
     </div>
 
